# PEA_Zad2

./: CMakeLists.txt
algorithms/: greedy.cpp  greedy.h  simulatedAnnealing.cpp  simulatedAnnealing.h
data/: fileOperator.cpp  fileOperator.h
menu/: main.cpp  testPath.txt
tests/: tester.cpp  tester.h
